--- a/client/package.json
+++ b/client/package.json
@@ -2,15 +2,13 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "@apollo/client": "^3.6.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "apollo-boost": "^0.4.9",
     "bootstrap": "^4.4.1",
-    "concurrently": "^7.2.1",
     "graphql": "^15.8.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
