--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "dependencies": {
-    "@apollo/client": "^3.6.5",
-    "@apollo/react-hooks": "^4.0.0",
-    "express.js": "^1.0.0",
+    "apollo-server-express": "^3.8.1",
+    "express": "^4.18.1",
     "graphql": "^16.5.0"
   },
   "name": "mern_bookengine",
@@ -10,11 +9,9 @@
   "version": "1.0.0",
   "main": "server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "seed": "cd server && npm run seed",
     "build": "cd client && npm run build"
   },
   "repository": {
